# skane-trails-checker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tflint.hcl  .trivyignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  PR_DESCRIPTION.md  README.md  TROUBLESHOOTING.md  all-skane-trails.gpx  app_maps.py  firestore.rules  my-custom-trail.gpx  pyproject.toml  renovate.json  requirements.txt  track_status.csv
.github/: TERRAFORM.md  copilot-instructions.md  labeler.yml  labels.yml  pull_request_template.md
.github/instructions/: firestore.instructions.md  python-style-guide.instructions.md  terraform.instructions.md  tsx-style-guide.instructions.md
.github/skills/copilot-self-improvement/: SKILL.md
.github/skills/local-development/: SKILL.md
.github/skills/pr-review-workflow/: SKILL.md
.github/skills/security/: SKILL.md
.github/skills/working-context/: SKILL.md
.github/workflows/: auto-approve-renovate.yml  auto-label-pr.yml  cache-update.yml  firebase-hosting.yml  renovate.yml  security-checks.yml  terraform-checks.yml  terraform-deploy.yml  tests.yml
.streamlit/: config.toml
api/: main.py
api/auth/: __init__.py  firebase.py  helpers.py  models.py
api/models/: foraging.py  hike_group.py  place.py  trail.py
api/routers/: foraging.py  hike_groups.py  places.py  trails.py
api/services/: gpx_parser.py  recording_processor.py
api/storage/: firestore_client.py  foraging_storage.py  hike_group_storage.py  places_storage.py  trail_storage.py  validation.py
app/: _Home_.py  requirements.txt  🌲_Home_.py
app/foraging_data/: foraging_data.csv  foraging_types.json
app/functions/: bootstrap_trails.py  env_loader.py  firestore_client.py  foraging.py  foraging_storage.py  gpx.py  place_models.py  places_storage.py  tracks.py  trail_converter.py  trail_models.py  trail_storage.py
app/pages/: 1_🥾_Hikes_map.py  2_🌿_Foraging_spots.py
app/resources/: foraging_resources.py  hikes_resources.py
app/tracks_gpx/other_trails/: Bokskogen_activity_11239820864.gpx  Bokskogen_activity_11343774359.gpx  Bokskogen_activity_11597095880.gpx  Bokskogen_activity_13401560292.gpx  Bokskogen_activity_18036734974.gpx  Brösarp_activity_17217223532.gpx  Bulltofta_activity_14897092963.gpx  Frostavallen_activity_11764668458.gpx  Fulltofta_activity_10959485786.gpx  Fulltofta_activity_11065301018.gpx  Fulltofta_activity_11451319247.gpx  Fulltofta_activity_14575589964.gpx  Hovdala_activity_11993033139.gpx  Hovdala_activity_14881558552.gpx  Hovdala_activity_16971599132.gpx  Järavallen_activity_11522062789.gpx  Järavallen_activity_11884241951.gpx  Järavallen_activity_13386243464.gpx  Järavallen_activity_14606327831.gpx  Järavallen_activity_17448209445.gpx  Kävlinge_activity_11114376374.gpx  Kävlinge_activity_13707107035.gpx  Kävlinge_activity_13912436766.gpx  Kävlinge_activity_14716834919.gpx  Kävlinge_activity_14781785087.gpx  Kävlinge_activity_14925119263.gpx  Kävlinge_activity_16589635912.gpx  Kävlinge_activity_17000006301.gpx  Kävlinge_activity_18019049492.gpx  Kävlinge_activity_18053110577.gpx  Kävlinge_activity_18663560796.gpx  Malmö_activity_11019911444.gpx  Malmö_activity_12014739613.gpx  README.md  (+22 more)
app/tracks_status/: README.md  track_skaneleden_status.csv
dev-tools/: README.md  backfill_trail_metadata.py  check_firestore.py  check_foraging.py  db_manager.py  delete_all_trails.py  delete_planned_trails.py  gpx_pipeline.py  import_foraging.py  import_places.py  import_sentiero_italia.py  migrate_auth.py  secret_mappings.yaml  sentiero_italia_firestore.py  sentiero_italia_wfs.py  setup_env.py  setup_mobile_env.py  trail_manager.py  update_skaneleden_trails.py
docs/: DEVELOPMENT.md  TROUBLESHOOTING.md
mobile/: app.config.ts  app.json  biome.json  eas.json  firebase.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
mobile/app/: +html.tsx  _layout.tsx  group-settings.tsx  no-access.tsx  settings.tsx  sign-in.tsx  upload.tsx
mobile/components/: AddSpotForm.tsx  BottomSheet.tsx  Button.tsx  Chip.tsx  ColorPicker.tsx  ContentCard.tsx  ElevationProfile.tsx  EmptyState.tsx  FloatingButton.tsx  FloatingCardOverlay.tsx  ForagingMap.tsx  ForagingSpotCard.tsx  FormField.tsx  GlassCard.tsx  GoogleLogo.tsx  HamburgerMenu.tsx  LayerToggle.tsx  MapInfoCard.tsx  OverlayAlignmentMode.tsx  OverlayManager.tsx  PlaceCard.tsx  PlaceCategoryIcon.tsx  ScreenLayout.tsx  StatCard.tsx  StatusBadge.tsx  TabIcon.tsx  TrackingControls.native.tsx  TrackingControls.web.tsx  TrackingOverlay.tsx  TrailCard.tsx  TrailMap.tsx  UnifiedMap.native.tsx  UnifiedMap.tsx  UnifiedMap.web.tsx  index.ts
mobile/lib/: firebase.ts  foraging-colors.ts  inject-css.ts  location-permissions.ts  map-overlays.ts  overlay-image-picker.ts  place-colors.ts  query-provider.tsx  register-sw.ts  reverse-geocode.ts  settings-context.tsx  track-to-trail.ts  tracking-context.tsx  tracking-service.ts  tracking-service.web.ts  trail-colors.ts  types.ts
mobile/patches/: expo-modules-core@55.0.15.patch
mobile/public/: manifest.json  sw.js
mobile/test/: helpers.tsx  react-native-mock.tsx  setup.ts
scripts/: backfill_trail_metadata.py
tests/: README.md  __init__.py  conftest.py  test_api_foraging.py  test_api_foraging_storage.py  test_api_hike_group_storage.py  test_api_hike_groups.py  test_api_models.py  test_api_models_extra.py  test_api_places.py  test_api_places_storage.py  test_api_storage.py  test_api_trail_storage.py  test_api_trails.py  test_auth_endpoints.py  test_auth_guard.py  test_exception_paths.py  test_firestore_client.py  test_foraging.py  test_foraging_functions.py  test_foraging_storage.py  test_gpx.py  test_gpx_functions.py  test_gpx_upload.py  test_home.py  test_place_models.py  test_places_storage.py  test_recording_processor.py  test_streamlit_imports.py  test_track_functions.py  test_tracks.py  test_trail_converter.py  test_trail_storage.py  test_validation.py
tracks_gps/other_trails/: activity_16971596763.gpx  activity_17276595163.gpx  activity_17423322407.gpx  activity_17560207058.gpx
tracks_gps/skaneleden/: all-skane-trails.gpx
(+132 files in other folders)
